--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,11 +3,10 @@ FROM node:18
 
 WORKDIR /app
 
-COPY . .
-RUN npm install
+COPY ./econome .
 
+RUN npm install
 
 EXPOSE 4200
 
-CMD ["npm", "start"]
-
+CMD ["ng", "serve", "--host", "0.0.0.0", "--port", "4200"]
